# pal_ohos

./: CMakeLists.txt  README.md  build-profile.json5  local.properties  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
classes/: CMakeLists.txt
classes/common/: CMakeLists.txt
classes/common/defs/: palcommon_util.h  ui_defs.h
classes/common/enums/: body_part.h  chara_status.h  item_flag.h  magic_type.h  object_state.h  triggle_mode.h
classes/common/structs/base/: battle_field.h  game_data.h  pal_pos.h  scene.h  script_entry.h
classes/common/structs/enemy/: enemy.h  enemy_pos.h  enemy_team.h
classes/common/structs/inventory/: inventory.h  store.h
classes/common/structs/magic/: level_up_magic.h  magic.h  magic_special.h
classes/common/structs/object/: event_object.h  object.h  object_enemy.h  object_item.h  object_magic.h  object_player.h  object_poison.h
classes/common/structs/player/: experience.h  party.h  player_roles.h  poison_status.h
classes/common/structs/temp/: SDL_Palette.h  SDL_Surface.h
classes/common/structs/ui/: box.h  object_desc.h  ui.h
classes/core/: CMakeLists.txt
classes/core/include/: global.h
classes/core/include/main/: global.h  script.h
classes/core/include/utils/: SDL_pal.h  math_util.h  mkf_util.h
classes/core/src/: CMakeLists.txt  global.cpp
classes/core/src/bridge/: CMakeLists.txt  dummy.cpp
classes/core/src/main/: CMakeLists.txt  global.cpp  script.cpp
classes/core/src/utils/: CMakeLists.txt  mkf_reader.cpp
classes/main/: CMakeLists.txt
game_core/: CMakeLists.txt
game_core/.arts/: cmake_settings.json  settings.json
game_core/bridge/: CMakeLists.txt  README.md  native_game_bridge.cpp  xcomponent_bridge_registry.cpp
game_core/engine/: CMakeLists.txt  audio.cpp  font.cpp  palcommon.cpp  player.cpp  sdl_compat.cpp  ui.cpp  video.cpp
game_core/engine/sdl_compat/: sdl_compat.cpp  sdl_pal.cpp
game_core/include/bridge/: native_game_bridge.h  xcomponent_bridge_registry.h
game_core/include/engine/: font.h  palcommon.h  sdl_compat.h  ui.h
game_core/include/engine/audio/: audio.h  players.h
game_core/include/engine/sdl_compat/: sdl_compat.h  sdl_pal.h
game_core/include/engine/video/: video.h
game_core/include/enums/: chara_status.h  global.h  magic_flag.h  magic_type.h  triggle_mode.h
game_core/include/src/: equipment_manager.h  fight.h  game.h  game_resource_loader.h  inventory_manager.h  main.h  play.h  player_attribute_calculator.h  player_progression_manager.h  player_status_manager.h  save_game_manager.h
game_core/include/src/base/: battle_field.h  files.h  game_data.h  global.h  pal_pos.h  scene.h  script_entry.h  store.h
game_core/include/src/enemy/: enemy.h  enemy_pos.h  enemy_team.h
game_core/include/src/enums/: item_flag.h  magic_type.h  object_state.h
game_core/include/src/inventory/: inventory.h  item_flag.h  store.h
game_core/include/src/magic/: level_up_magic.h  magic.h  magic_flag.h  magic_special.h  magic_type.h
game_core/include/src/object/: event_object.h  object.h  object_enemy.h  object_item.h  object_magic.h  object_player.h  object_poison.h  object_state.h  triggle_mode.h
game_core/include/src/player/: body_part.h  chara_status.h  experience.h  party.h  player_roles.h  poison_status.h  trail.h
game_core/include/src/temp/: SDL_Color.h  SDL_Palette.h  SDL_Rect.h  SDL_Surface.h  SDL_Util.h
game_core/include/src/ui/: box.h  ui.h
game_core/include/util/: common.h  defines.h  log_common.h  pal_config.h  palcfg.h  palcommon.h  sys_check.h  util.h
game_core/src/: CMakeLists.txt  README.md  equipment_manager.cpp  fight.cpp  game.cpp  game_resource_loader.cpp  inventory_manager.cpp  main.cpp  play.cpp  player_attribute_calculator.cpp  player_progression_manager.cpp  player_status_manager.cpp  save_game_manager.cpp
game_core/src/base/: global.cpp
game_core/util/: CMakeLists.txt  palcfg.cpp  palcommon.cpp  util.cpp
(+33 files in other folders)
